--- a/.github/workflows/deploy-stable.yml
+++ b/.github/workflows/deploy-stable.yml
@@ -1,4 +1,4 @@
-name: Deploy to GitHub Pages
+name: Deploy Stable to GitHub Pages
 
 on:
   push:
@@ -25,9 +25,10 @@ jobs:
 
       - name: Build
         run: yarn build
-
+        
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           folder: dist
           branch: gh-pages
+          target-folder: / # Deploy to root folder
