--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "gh-pages -d dist"
+    "deploy:stable": "cross-env VITE_DEPLOY_ENV=stable yarn build && gh-pages -d dist",
+    "deploy:experimental": "cross-env VITE_DEPLOY_ENV=experimental yarn build && gh-pages -d dist -e experimental"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.2",
@@ -31,6 +32,7 @@
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
+    "cross-env": "^7.0.3",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
